2008-06-25  Emmanuele Bassi  <set EMAIL_ADDRESS environment variable>

	* clutter/clutter-actor.c:
	(clutter_actor_set_min_width),
	(clutter_actor_set_min_height),
	(clutter_actor_set_natural_width),
	(clutter_actor_set_natural_height): If setting the minimum
	and natural width and height on a top-level actor, and on
	a backend that provides only static stages, then override
	the value and use the size of the display as returned by
	the backend.

	* clutter/eglnative/clutter-stage-egl.c:
	(clutter_stage_egl_realize): Remove the setting of the
	minimum and natural width and height.

2008-06-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-stage.c:
	(clutter_stage_allocate): Minor optimization.

	(clutter_stage_init): Do not set the minimum size of the
	stage wrapper, and require that the backends set the size
	themselves.

2008-06-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/eglnative/clutter-stage-egl.c:
	(clutter_stage_egl_realize): Try to force the minimum and
	natural size on realization.

2008-06-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-backend.c:
	(clutter_backend_get_display_size): Provide a fallback for
	backends not implementing get_display_size().

	* clutter/clutter-stage.c:
	(clutter_stage_allocate): Add debug messages.

	* clutter/sdl/clutter-backend-sdl.c:
	(clutter_backend_sdl_get_display_size),
	(clutter_backend_sdl_class_init): Implement get_display_size()
	on the SDL backend.

2008-06-25  Chris Lord  <chris@openedhand.com>

	* clutter/clutter-fixed.c: (clutter_sinx):
	Fix clutter_sinx for angles > CFX_2PI - CFX_ONE. Also add note to
	documentation about being able to use modulus with ClutterFixed

2008-06-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-backend.h:
	* clutter/clutter-backend.c:
	(clutter_backend_get_display_size): Add a function for getting the
	display size out of the backend.

	* clutter/clutter-stage.c: